# FlockDoc

./: .env.example  .gitignore  LICENSE  README.md  SYSTEM_DESIGN.txt  app.js  index.html  pyproject.toml  requirements.txt  style.css
backend/: chatbot.py  disease_predictor.py
backend/backend/: __init__.py  disease_predictor.py  image_analyzer.py  main.py
data/: reference.json
data/data/: diseases.json  symptoms.json  tools.json  treatments.json
